#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])

AC_INIT([Progel], [0.1], [mpattanaik7@gmail.com])
AC_CONFIG_SRCDIR([main.c])
AM_INIT_AUTOMAKE

#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX([g++])
AC_PROG_CC([gcc])

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
